--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@babel/core": "^7.12.7",
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "babel-loader": "^8.2.1",
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^3.0.0",
